<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
   >


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragments.FragmentSearch"
   >


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="Explore"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_heading_1x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/str_btn_filter"
        android:textAllCaps="false"
        android:textSize="@dimen/text_small"
        android:textColor="@android:color/black"
        app:icon="@drawable/ic_filter_foreground"
        app:iconSize="20dp"
        app:iconGravity="start"
        app:cornerRadius="20dp"
        app:iconTint="@color/color_violent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        android:hint="@string/str_txt_location"
        android:layout_margin="@dimen/margin_large"
        app:endIconTint="@color/color_violent"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_direction_foreground"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/bg_main"
            android:textColor="@color/color_gray"
            android:enabled="false"
            >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_checkIn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_location"
        app:layout_constraintStart_toStartOf="@+id/txt_location"
        android:hint="@string/str_txt_checkin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_checkIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_location"
        app:layout_constraintEnd_toEndOf="@+id/txt_location"
        app:layout_constraintTop_toTopOf="@+id/txt_checkIn"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/str_txt_checkout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_checkOut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_count"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_checkIn"
        app:layout_constraintStart_toStartOf="@+id/txt_checkIn"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/str_txt_count">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_location"
        app:layout_constraintTop_toBottomOf="@+id/txt_checkIn"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/txt_str_room">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_room"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_count"
        app:layout_constraintStart_toStartOf="@+id/txt_count"
        android:backgroundTint="@color/color_violent"
        android:text="@string/str_btn_search_now"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_book"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        app:icon="@drawable/ic_map_foreground"
        app:iconSize="40dp"
        app:iconGravity="textStart"
        app:iconPadding="2dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_location"
        app:layout_constraintTop_toBottomOf="@+id/txt_count"
        app:layout_constraintTop_toTopOf="@+id/btn_search"
        android:backgroundTint="@color/color_violent"
        />

    <TextView
        android:id="@+id/txt_top_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/str_txt_top_search"
        app:layout_constraintStart_toStartOf="@+id/btn_search"
        app:layout_constraintTop_toBottomOf="@+id/btn_search" />

    <include
        android:id="@+id/ltop_search"
        layout="@layout/top_search_hotel_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="@+id/txt_top_search"
        app:layout_constraintEnd_toEndOf="@+id/txt_location"
        app:layout_constraintTop_toBottomOf="@+id/txt_top_search"/>

    <TextView
        android:id="@+id/txt_recent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/txt_location"
        app:layout_constraintTop_toBottomOf="@+id/ltop_search"
        android:layout_marginTop="24sp"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/str_txt_recent"
        />
    <include layout="@layout/recent_hotel_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_recent"
        app:layout_constraintStart_toStartOf="@+id/txt_recent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
        <include layout="@layout/bottom_sheet"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>