<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    app:behavior_hideable="true"
    android:id="@+id/bottom_sheet"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/txt_cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/color_violent"
        android:text="@string/str_txt_cancle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_txt_filter"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_cancle"
        app:layout_constraintBottom_toBottomOf="@+id/txt_cancle"/>

    <TextView
        android:id="@+id/txt_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_txt_reset"
        android:textColor="@color/color_violent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_cancle"
        app:layout_constraintBottom_toBottomOf="@+id/txt_cancle"
        android:layout_marginEnd="17dp"/>

    <TextView
        android:id="@+id/txt_sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/str_txt_sortby"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintStart_toStartOf="@+id/txt_cancle"
        app:layout_constraintTop_toBottomOf="@+id/txt_cancle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_sort_by"
        android:layout_margin="20dp"
        app:endIconMode="dropdown_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
>
        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/edt_price"
            android:hint="@string/str_txt_price"
            android:editable="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_txt_rating"
        android:layout_marginTop="24sp"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintTop_toBottomOf="@+id/txt_price"
        app:layout_constraintStart_toStartOf="@+id/txt_cancle"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_rating"
        android:layout_margin="10dp"
        app:singleLine="false"
        app:singleSelection="true"
        app:selectionRequired="true"
        >
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/rating_chip_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_chip_none"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/color_gray"
            android:textColor="@color/color_gray"
            app:chipBackgroundColor="@drawable/chip_selector"/>
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/rating_chip_two"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="1"
            app:chipIcon="@drawable/ic_rating_foreground"
            app:chipIconSize="30dp"
            app:chipIconVisible="true"
            app:chipStrokeWidth="1dp"
            android:textColor="@color/color_gray"
            app:chipStrokeColor="@color/color_gray"
            app:chipBackgroundColor="@drawable/chip_selector"/>
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/rating_chip_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            app:chipStrokeWidth="1dp"
            app:chipIcon="@drawable/ic_rating_foreground"
            app:chipIconSize="30dp"
            app:chipIconVisible="true"
            android:textColor="@color/color_gray"
            app:chipStrokeColor="@color/color_gray"
            app:chipBackgroundColor="@drawable/chip_selector"/>
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/rating_chip_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            app:chipIcon="@drawable/ic_rating_foreground"
            app:chipIconSize="30dp"
            app:chipIconVisible="true"
            app:chipStrokeWidth="1dp"
            android:textColor="@color/color_gray"
            app:chipStrokeColor="@color/color_gray"
            app:chipBackgroundColor="@drawable/chip_selector"/>
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/rating_chip_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_rating_foreground"
            app:chipIconSize="30dp"
            app:chipIconVisible="true"
            android:text="4"
            app:chipStrokeWidth="1dp"
            android:textColor="@color/color_gray"
            app:chipStrokeColor="@color/color_gray"
            app:chipBackgroundColor="@drawable/chip_selector"/>
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/rating_chip_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_rating_foreground"
            app:chipIconSize="30dp"
            app:chipIconVisible="true"
            android:text="5"
            app:chipStrokeWidth="1dp"
            android:textColor="@color/color_gray"
            app:chipStrokeColor="@color/color_gray"
            app:chipBackgroundColor="@drawable/chip_selector"/>
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/txt_price_range"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_txt_price_range"
        app:layout_constraintStart_toStartOf="@+id/txt_rating"
        app:layout_constraintTop_toBottomOf="@+id/chip_group" />

    <TextView
        android:id="@+id/txt_price_dollor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="$90-$220"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintStart_toStartOf="@+id/txt_price_range"
        app:layout_constraintTop_toBottomOf="@+id/txt_price_range" />

    <TextView
        android:id="@+id/txt_price_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Average- $150"
        app:layout_constraintEnd_toEndOf="@+id/txt_reset"
        app:layout_constraintTop_toTopOf="@+id/txt_price_dollor"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_filter_now"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:text="@string/str_btn_filter_now"
        android:backgroundTint="@color/color_violent"
        app:layout_constraintTop_toBottomOf="@+id/txt_price_dollor"
        app:layout_constraintStart_toStartOf="@+id/txt_price_dollor"
        android:layout_marginTop="18dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_book"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        app:icon="@drawable/ic_map_foreground"
        app:iconSize="40dp"
        app:iconGravity="textStart"
        app:iconPadding="2dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_price_average"
        app:layout_constraintTop_toTopOf="@+id/btn_filter_now"
        android:backgroundTint="@color/color_violent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>